--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h1>Narasimha Naidu</h1>
                     <center>
                     <h4>
-                    <p>Mobile 📞:  <a href=“tel:9177787729”>9177787729</a></p>
+                    <p>Mobile 📞:  <a href=“tel:+919177787729”>9177787729</a></p>
                     <p>Email 📧:  <a href="mailto: narasimhanaidu2728@gmail.com">narasimhanaidu2728@gmail.com</a></p>
                     <p>Address 🏡: Bapatla,Bheemavaripalem,</p><break>Near:Oxford School.</break></p>
                     <p>Map-Location📍:<a href="https://maps.app.goo.gl/NsTLC75Ff1USaKQy8">click here</a>!</p>
